--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2 id="downloads">DOWNLOAD</h2>
             <ul id="download-list">
                 <li class="download-item">
-                    <a href="https://github.com/cookiemonsternz/sliftgame.me/raw/refs/heads/main/downloads/Win64/SLIFTBuild0.2.3.exe" download>
+                    <a href="https://drive.usercontent.google.com/download?id=1GEzd0Q5moNeHNfx45XyFVhrQ_T79Q5mf&export=download" download>
                         <button class="download-button">
                             <!-- Windows icon -->
                             <img id="download-button-icon" src="https://img.icons8.com/?size=100&id=j3a3wWATUlM8&format=png&color=FFFFFF">
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li class="download-item">
-                    <a href="https://github.com/cookiemonsternz/sliftgame.me/raw/refs/heads/main/downloads/Mac/SLIFTBuild0.2.3.zip" download>
+                    <a href="https://drive.google.com/uc?export=download&id=1mw4ujcRfAMajG7reFMncHWnNLhOOAR-V" download>
                         <button class="download-button">
                             <!-- Mac icon -->
                             <img id="download-button-icon" src="https://img.icons8.com/?size=100&id=30840&format=png&color=FFFFFF">
@@ -61,7 +61,7 @@
                     </a>
                 </li>
                 <li class="download-item">
-                    <a href="lol.com" download>
+                    <a href="https://drive.google.com/uc?export=download&id=107mQCmPkp19aodKe4mEM0bOit6SsfsTX" download>
                         <button class="download-button">
                             <!-- Linux icon -->
                             <img id="download-button-icon" src="https://img.icons8.com/?size=100&id=38796&format=png&color=FFFFFF">
